--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 		function secondHighest(arr) {
 			//Write your code here
 			let len = arr.length;
-			if(len < 2 || len === 0)
+			if(len < 2 || len == 0)
 			{
 				return "-Infinity";
 			}
