--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 			{
 				return "-Infinity";
 			}
-			arr.sort();
+			arr.sort((a, b) => a - b);
         // arr.reverse();
 		let num = 0;
 			for(let i = 0; i<arr.length; i++){
@@ -25,6 +25,7 @@
 			}
 		}
 
+			
 			if(num === arr.length-1)
 			{
 				return "-Infinity";
